--- a/package.json
+++ b/package.json
@@ -1,25 +1,41 @@
 {
-  "name": "laravel-rest",
-  "version": "0.0.1",
-  "description": "Sample Laravel Restified Application",
-  "main": "gulpfile.js",
-  "dependencies": {
-    "gulp": "^3.6.1"
-  },
-  "devDependencies": {
-    "gulp-phpunit": "^0.5.1",
-    "gulp-notify": "^1.1.1",
-    "gulp-filelog": "~0.2.0",
-    "gulp-codeception": "^0.4.1",
-    "gulp-phpspec": "^0.2.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@git2.eu1.frbit.com:laravel-rest.git"
-  },
-  "author": "",
-  "license": "MIT"
+	"name": "gulp-behat",
+	"version": "0.0.2",
+	"description": "Behat plugin for Gulp",
+	"main": "index.js",
+	"dependencies": {
+		"map-stream": "0.0.4",
+		"gulp-util": "~2.2.14"
+	},
+	"devDependencies": {
+		"jshint": "~2.4.4",
+		"mocha": "~1.17.1",
+		"should": "~3.1.2",
+		"gulp-notify": "^1.0.0-beta",
+		"gulp-shell": "^0.2.4",
+		"gulp": "^3.5.5"
+	},
+	"scripts": {
+		"test": "mocha && jshint ./*.js && jshint ./test/*.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/mikeerickson/gulp-behat"
+	},
+	"keywords": [
+		"gulpplugin",
+		"phpspec"
+	],
+	"author": "Mike Erickson <codedungeon@gmail.com>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/mikeerickson/gulp-behat/issues"
+	},
+	"engines": {
+		"node": ">=0.10.0"
+	},
+	"homepage": "https://github.com/mikeerickson/gulp-behat",
+	"directories": {
+		"test": "test"
+	}
 }
