--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-behat",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "description": "Behat plugin for Gulp",
   "main": "index.js",
   "dependencies": {
@@ -8,13 +8,13 @@
     "gulp-util": "~2.2.14"
   },
   "devDependencies": {
+    "gulp": "^3.5.5",
+    "gulp-notify": "^2.0.0",
+    "gulp-shell": "^0.2.4",
+    "gulp-util": "^2.2.20",
     "jshint": "^2.5.3",
     "mocha": "~1.17.1",
-    "should": "~3.1.2",
-    "gulp-notify": "^1.4.2",
-    "gulp-shell": "^0.2.4",
-    "gulp": "^3.5.5",
-    "gulp-util": "^2.2.20"
+    "should": "~3.1.2"
   },
   "scripts": {
     "test": "mocha --reporter=spec && jshint ./*.js && jshint ./test/*.js"
