--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "Behat plugin for Gulp",
   "main": "index.js",
   "dependencies": {
-    "chalk": "^1.0.0",
+    "chalk": "1.1.3",
     "gulp": "^3.8.11",
     "gulp-util": "~2.2.14",
-    "map-stream": "0.0.4"
+    "map-stream": "0.0.6"
   },
   "devDependencies": {
     "gulp": "^3.5.5",
     "gulp-notify": "^2.0.0",
-    "gulp-shell": "^0.2.4",
-    "gulp-util": "^2.2.20",
+    "gulp-shell": "0.5.2",
+    "gulp-util": "3.0.8",
     "jshint": "^2.5.3",
-    "mocha": "~1.17.1",
-    "should": "~3.1.2"
+    "mocha": "3.2.0",
+    "should": "11.1.2"
   },
   "scripts": {
     "test": "mocha --reporter=spec && jshint ./*.js && jshint ./test/*.js"
